// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NuVsExportPreview /> renders correctly otherwise 1`] = `
<div>
  <label>
    Preview
  </label>
  <Well
    bsClass="well"
    className="text-muted"
  >
    <p
      style={
        Object {
          "marginBottom": 0,
          "wordWrap": "break-word",
        }
      }
    >
      <code>
        &gt;orf_1_1|17SP002|RNA Polymerase
      </code>
    </p>
    <p
      style={
        Object {
          "wordWrap": "break-word",
        }
      }
    >
      <code>
        ELREECRSLRSRCDQLEERVSAMEDEMNEMKREGKFREKRIKRNEQSLQEIWDYVKRPNLRLIGVPESDGENGTKLENTFREKSAME
        …
      </code>
    </p>
  </Well>
  <label>
    Header Fields
  </label>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Example
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          sequence index + orf index
        </td>
        <td>
          <code>
            orf_1_1
          </code>
        </td>
      </tr>
      <tr>
        <td>
          sample name
        </td>
        <td>
          <code>
            17SP002
          </code>
        </td>
      </tr>
      <tr>
        <td>
          best annotation
        </td>
        <td>
          <code>
            RNA Polymerase
          </code>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;

exports[`<NuVsExportPreview /> renders correctly when [mode=contigs] 1`] = `
<div>
  <label>
    Preview
  </label>
  <Well
    bsClass="well"
    className="text-muted"
  >
    <p
      style={
        Object {
          "marginBottom": 0,
          "wordWrap": "break-word",
        }
      }
    >
      <code>
        &gt;sequence_1|17SP002|RNA Polymerase|cg30
      </code>
    </p>
    <p
      style={
        Object {
          "wordWrap": "break-word",
        }
      }
    >
      <code>
        CATTTTATCAATAACAATTAAAACAAACAAACAAAAAAACCTTACCAGCAGCAACAGCAAGATGGCCAAATAGGAACAGATAGGGAC
        …
      </code>
    </p>
  </Well>
  <label>
    Header Fields
  </label>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Example
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          sequence index
        </td>
        <td>
          <code>
            sequence_1
          </code>
        </td>
      </tr>
      <tr>
        <td>
          sample name
        </td>
        <td>
          <code>
            17SP002
          </code>
        </td>
      </tr>
      <tr>
        <td>
          bar-separated ORF annotations
        </td>
        <td>
          <code>
            RNA Polymerase|cg30
          </code>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;
